--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: OpenBudgets
 description: > # this means to ignore newlines until "baseurl:"
   Upload, Visualize, Analyse public budget and spending data. Start exploring and learn stories behind budgets.
-baseurl: "openbudgetseu-staging" # the subpath of your site, e.g. /blog/
+baseurl: "/openbudgetseu-staging" # the subpath of your site, e.g. /blog/
 url: "http://openbudgets.eu/" # the base hostname & protocol for your site
 
 github_username:  openbudgets
