Add Linkedin icon

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ github_username:  openbudgets
 github_repo: openbudgets.github.io
 twitter_username: openbudgetseu
 facebook_username: openbudgets
+linkedin: company/open-budgets
 
 github_link: openbudgets
 
