add dates to events page

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -6,7 +6,8 @@
   link: https://wiki.digitalmethods.net/Dmi/WinterSchool2016
 
 - title: "OpenBudgets Stakeholder Workshop"
-  date: 30 November 2015 - 1 December 2015
+  from: 2015-11-30
+  to: 2015-12-01
   status: past
   description: |
       The Open Budgets Stakeholder Workshop invites a variety of different stakeholders working with budget data (journalists, civil society organisations, activists, parlamentarians) in order to explore the chances of OpenBudgets.eu as a tool for their their work in fiscal transparency.
