add twitter feed

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ contact: anna.alberts@okfn.de
 
 googleanalytics: UA-48682838-7
 
+twitter_feed: 730706209104384000
+
 # Build settings
 markdown: kramdown
 
